Add bool query `must_not` clauses as prefilters